--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     body{
         background-image:url("background3.png");
         background-repeat: no-repeat;
-        background-attachment:scroll;
+        background-attachment:fixed;
         background-size: cover;
         
     }
@@ -29,6 +29,9 @@
     button{
         font-size: 30px;
         margin-left: 550px;
+        background-color: aqua;
+        border:1vh solid grey;
+        font-size: 4vh;
     }
 
     /* Media Query for Mobile Devices */
@@ -54,6 +57,9 @@
             font-size: 20px;
             margin: 20px auto 0 auto;
             display: block;
+            background-color: aqua;
+            border:1vh solid grey;
+            font-size: 4vh;
         }
     }
 
@@ -75,6 +81,9 @@
         button {
             font-size: 25px;
             margin-left: 100px;
+            background-color: aqua;
+            border:1vh solid grey;
+            font-size: 4vh;
         }
     }
 
@@ -95,6 +104,10 @@
         button {
             font-size: 30px;
             margin-left: 550px;
+            background-color: aqua;
+            border:1vh solid grey;
+            font-size: 4vh;
+
         }
     }
 </style>
