--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <h1>Automated Reconcilation Solutions</h1>
             <p>This service provides guidance on the implementation of automated payment reconcilation systems, including the benefits and potential pitfalls of automation.
             </p>
-            <button href="https://rohit131313.github.io/payment5/">Enroll  Now</button>
+            <a  href="https://rohit131313.github.io/payment5/"><button>Enroll  Now</button></a>
         </div>
     </div>
 </body>
