--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         font-size: 30px;
     }
 
-    button{
+    .button{
         font-size: 30px;
         margin-left: 550px;
         background-color: aqua;
@@ -53,7 +53,7 @@
             margin: 0 auto;
         }
 
-        button {
+        .button {
             font-size: 20px;
             margin: 20px auto 0 auto;
             display: block;
@@ -78,7 +78,7 @@
             margin-left: 20px;
         }
 
-        button {
+        .button {
             font-size: 25px;
             margin-left: 100px;
             background-color: aqua;
@@ -125,7 +125,7 @@
             <h1>Automated Reconcilation Solutions</h1>
             <p>This service provides guidance on the implementation of automated payment reconcilation systems, including the benefits and potential pitfalls of automation.
             </p>
-            <a  href="https://rohit131313.github.io/payment5/"><button>Enroll  Now</button></a>
+            <a href="https://rohit131313.github.io/payment5/" class="button">Enroll Now</a>
         </div>
     </div>
 </body>
